crates/oxc_react_compiler/tests/snapshots/fbt__bug-fbt-plural-multiple-function-calls.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/bug-fbt-plural-multiple-function-calls.ts
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees:false
import fbt from "fbt";
/**
* Source offsets must distinguish multiple fbt.plural(...) calls in the same
* translation.
*/
function useFoo(t0) {
	const $ = _c(3);
	const { apples, bananas } = t0;
	let t1;
	if ($[0] !== apples || $[1] !== bananas) {
		t1 = fbt(`${fbt.param("number of apples", apples)} ` + fbt.plural("apple", apples) + ` and ${fbt.param("number of bananas", bananas)} ` + fbt.plural("banana", bananas), "TestDescription");
		$[0] = apples;
		$[1] = bananas;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		apples: 1,
		bananas: 2
	}]
};
