crates/oxc_react_compiler/tests/snapshots/fbt__bug-fbt-plural-multiple-mixed-call-tag.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/bug-fbt-plural-multiple-mixed-call-tag.tsx
---
import { c as _c } from "react/compiler-runtime";
import fbt from "fbt";
/**
* Source offsets must distinguish plurals across both <fbt:plural />
* namespaced JSX tags and fbt.plural(...) call expressions.
*/
function useFoo(t0) {
	const $ = _c(3);
	const { apples, bananas } = t0;
	let t1;
	if ($[0] !== apples || $[1] !== bananas) {
		t1 = <div><fbt desc="Test Description">
        {fbt.param("number of apples", apples)}
        {"  "}
        {fbt.plural("apple", apples)} and
        {"  "}
        <fbt:plural name="number of bananas" count={bananas} showCount="yes">
          banana
        </fbt:plural>
      </fbt></div>;
		$[0] = apples;
		$[1] = bananas;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		apples: 1,
		bananas: 2
	}]
};
