crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-fbt-plural-in-expression-container.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-fbt-plural-in-expression-container.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support duplicate fbt tags", labels: [LabeledSpan { label: Some("Multiple `<fbt:plural>` tags found"), span: Span { start: 96, end: 106 }, primary: false }, LabeledSpan { label: Some("Multiple `<fbt:plural>` tags found"), span: Span { start: 292, end: 302 }, primary: false }], help: Some("Support `<fbt>` tags with multiple `<fbt:plural>` values"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
