crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-fbt-unknown-enum-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-fbt-unknown-enum-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support duplicate fbt tags", labels: [LabeledSpan { label: Some("Multiple `<fbt:enum>` tags found"), span: SourceSpan { offset: 100, length: 8 }, primary: false }, LabeledSpan { label: Some("Multiple `<fbt:enum>` tags found"), span: SourceSpan { offset: 170, length: 8 }, primary: false }], help: Some("Support `<fbt>` tags with multiple `<fbt:enum>` values"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
