crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-forward-local-fbt-reports-once.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-forward-local-fbt-reports-once.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Support local variables named `fbt`", labels: [LabeledSpan { label: Some("Local variables named `fbt` are not supported"), span: Span { start: 101, end: 104 }, primary: true }], help: Some("Local variables named `fbt` may conflict with the fbt plugin and are not yet supported"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
