crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-local-fbt-preserves-earlier-diagnostics.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-local-fbt-preserves-earlier-diagnostics.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "The 'eval' function is not supported", labels: [LabeledSpan { label: Some("`eval` cannot be analyzed by React Compiler"), span: Span { start: 25, end: 29 }, primary: true }], help: Some("Eval is an anti-pattern in JavaScript, and the code executed cannot be evaluated by React Compiler"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Warning, code: OxcCode { scope: Some("react-compiler"), number: Some("UnsupportedSyntax") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "Support local variables named `fbt`", labels: [LabeledSpan { label: Some("Local variables named `fbt` are not supported"), span: Span { start: 48, end: 51 }, primary: true }], help: Some("Local variables named `fbt` may conflict with the fbt plugin and are not yet supported"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
