crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-locally-require-fbt.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-locally-require-fbt.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support local variables named `fbt`", labels: [LabeledSpan { label: None, span: Span { start: 36, end: 39 }, primary: false }], help: Some("Local variables named `fbt` may conflict with the fbt plugin and are not yet supported"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
