crates/oxc_react_compiler/tests/snapshots/fbt__error.todo-multiple-fbt-plural.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/error.todo-multiple-fbt-plural.tsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support duplicate fbt tags", labels: [LabeledSpan { label: Some("Multiple `<fbt:plural>` tags found"), span: Span { start: 1311, end: 1321 }, primary: false }, LabeledSpan { label: Some("Multiple `<fbt:plural>` tags found"), span: Span { start: 1442, end: 1452 }, primary: false }], help: Some("Support `<fbt>` tags with multiple `<fbt:plural>` values"), note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
