crates/oxc_react_compiler/tests/snapshots/fbt__fbs-params.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbs-params.js
---
import { c as _c } from "react/compiler-runtime";
import { fbs } from "fbt";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.name) {
		t0 = <div title={<fbs desc="Dialog to show to user">
          Hello <fbs:param name="user name">{props.name}</fbs:param>
        </fbs>}>Hover me</div>;
		$[0] = props.name;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ name: "Sathya" }]
};
