crates/oxc_react_compiler/tests/snapshots/fbt__fbs-tag-ignores-nested-shadow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/fbt/fbs-tag-ignores-nested-shadow.js
---
import { c as _c } from "react/compiler-runtime";
import { fbs } from "fbt";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <fbs desc="Greeting">Hello</fbs>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
